syntax = "proto3";
package ics.provider.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "ics/provider/v1/params.proto";
import "ics/provider/v1/provider.proto";

option go_package = "github.com/atomone-hub/ics-poc-1/modules/provider/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ics/provider/v1/params";
  }

  // ConsumerChains queries all registered consumer chains.
  rpc ConsumerChains(QueryConsumerChainsRequest) returns (QueryConsumerChainsResponse) {
    option (google.api.http).get = "/ics/provider/v1/consumer_chains";
  }

  // ConsumerChain queries a specific consumer chain by ID.
  rpc ConsumerChain(QueryConsumerChainRequest) returns (QueryConsumerChainResponse) {
    option (google.api.http).get = "/ics/provider/v1/consumer_chains/{chain_id}";
  }

  // ActiveConsumerChains queries only active consumer chains.
  rpc ActiveConsumerChains(QueryActiveConsumerChainsRequest) returns (QueryActiveConsumerChainsResponse) {
    option (google.api.http).get = "/ics/provider/v1/active_consumer_chains";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryConsumerChainsRequest is request type for the Query/ConsumerChains RPC method.
message QueryConsumerChainsRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryConsumerChainsResponse is response type for the Query/ConsumerChains RPC method.
message QueryConsumerChainsResponse {
  // consumer_chains is the list of all registered consumer chains.
  repeated ConsumerChain consumer_chains = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryConsumerChainRequest is request type for the Query/ConsumerChain RPC method.
message QueryConsumerChainRequest {
  // chain_id is the unique identifier for the consumer chain.
  string chain_id = 1;
}

// QueryConsumerChainResponse is response type for the Query/ConsumerChain RPC method.
message QueryConsumerChainResponse {
  // consumer_chain is the requested consumer chain.
  ConsumerChain consumer_chain = 1 [(gogoproto.nullable) = false];
}

// QueryActiveConsumerChainsRequest is request type for the Query/ActiveConsumerChains RPC method.
message QueryActiveConsumerChainsRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryActiveConsumerChainsResponse is response type for the Query/ActiveConsumerChains RPC method.
message QueryActiveConsumerChainsResponse {
  // consumer_chains is the list of active consumer chains.
  repeated ConsumerChain consumer_chains = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
